# apod-nasa

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  apod.py  pyproject.toml
.github/instructions/: kubernetes-deploy.instructions.md
.github/prompts/: release.prompt.md
.github/workflows/: publishing-image.yml  pylint.yml
deploy/: default.conf  deployment.yml  httproute.yml  ingress.yml  kustomization.yml  service.yml
templates/: index.html
