[tool.poetry]
name = "apod-nasa"
version = "0.3.0"
description = ""
authors = ["Ayres Fonseca <ayres.fonseca@yahoo.ca>"]
license = "MIT"
readme = "README.md"
packages = [{include = "apod_nasa"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
requests = "^2.28.1"
uwsgi = "^2.0.20"
werkzeug = "^3.0.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
yamllint = "^1.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
