[project]
name = "apod-nasa"
version = "0.4.2"
description = "Minimal application Astronomy Picture of the Day based on NASA APOD API"
authors = [
    { name = "Ayres Fonseca", email = "ayres.fonseca@gmail.com" }
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
package-mode = false

dependencies = [
    "Flask (>=2.2.2)",
    "requests (>=2.28.1)",
    "uwsgi (>=2.0.20)",
    "werkzeug (>=3.0.6)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
flake8 = "^5.0.4"
pylint = "^2.15.5"
yamllint = "^1.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
